versioned_docs/version-2022.2.1/professor/grazielli_bueno.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Grazielli Bueno",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Projetos e Instalações Elétricas",
          size: 2,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "Sala 8-2",
          students: [
            "EIN2020"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Segurança do Trabalho",
          size: 1,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "Sala 8-2",
          students: [
            "EIN2020"
          ],
          time: "11:05 - 11:55"
        },
        {
          subject: "Segurança do Trabalho",
          size: 2,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "",
          students: [
            "ELE2022",
            "ELM2021"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Projeto Integrador",
          size: 1,
          teachers: [
            "Kátia Cristiane Kobus Novaes",
            "Grazielli Bueno"
          ],
          classroom: "Sala 9-2",
          students: [
            "EIN2019"
          ],
          time: "09:25 - 10:15"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Conservação de Recursos Naturais (PPC2020)",
          size: 2,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "Sala 1-4",
          students: [
            "ELE2021"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Energias alternativas (PPC2020)",
          size: 2,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "Sala 1-4",
          students: [
            "ELE2021"
          ],
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Energias alternativas (PPC2020)",
          size: 2,
          teachers: [
            "Grazielli Bueno"
          ],
          classroom: "Sala 1-4",
          students: [
            "ELE2021"
          ],
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Grazielli Bueno

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
